[package]
name = "bignum_rust_lib"
version = "0.1.0"
authors = ["Chris Battarbee <chris@chrisbattarbee.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.3"

[[bench]]
path = "src/benches/big_num.rs"
name = "big_num"
harness = false
